--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
                 <h2>Featured Products</h2>
                 <div class="product-grid">
                     <div class="product">
-                        <img src="watch.webp" alt="Product 1">
+                        <img src="https://image.kilimall.com/kenya/shop/store/goods/9480/2023/12/1701625543495cc666392564e486297f06543818c1d9f.jpg?x-image-process=image/format,webp/resize,w_360#" alt="Product 1">
                         <h3>Product 1</h3>
                         <p>$19.99</p>
                     </div>
@@ -45,12 +45,12 @@
                         <p>$29.99</p>
                     </div>
                     <div class="product">
-                        <img src="https://via.placeholder.com/150" alt="Product 3">
+                        <img src="https://image.kilimall.com/kenya/shop/store/goods/7944/2023/10/169876151376346daef2bd7fc4cefa00c44986552a452.jpg?x-image-process=image/format,webp/resize,w_360#" alt="Product 3">
                         <h3>Product 3</h3>
                         <p>$39.99</p>
                     </div>
                     <div class="product">
-                        <img src="https://via.placeholder.com/150" alt="Product 4">
+                        <img src="https://img.kilimall.com/c/public/store/11391/goods/image/100959259.jpg?x-image-process=image/format,webp/resize,w_360#" alt="Product 4">
                         <h3>Product 4</h3>
                         <p>$49.99</p>
                     </div>
