--- a/frontend/home.html
+++ b/frontend/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Marketplace</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
     <header>
@@ -16,7 +16,7 @@
                     <li><a href="#">Products</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
-                    <li><a href="#">Login</a></li>
+                    <li><a href="login.html">Login</a></li>
                 </ul>
             </nav>
         </div>
@@ -36,22 +36,22 @@
                 <div class="product-grid">
                     <div class="product">
                         <img src="https://image.kilimall.com/kenya/shop/store/goods/9480/2023/12/1701625543495cc666392564e486297f06543818c1d9f.jpg?x-image-process=image/format,webp/resize,w_360#" alt="Product 1">
-                        <h3>Product 1</h3>
+                        <h3>watch</h3>
                         <p>$19.99</p>
                     </div>
                     <div class="product">
                         <img src="https://img.kilimall.com/c/public/store/7474/goods/image/101461727.jpg?x-image-process=image/format,webp/resize,w_360#" alt="Product 2">
-                        <h3>Product 2</h3>
+                        <h3>watch</h3>
                         <p>$29.99</p>
                     </div>
                     <div class="product">
                         <img src="https://image.kilimall.com/kenya/shop/store/goods/7944/2023/10/169876151376346daef2bd7fc4cefa00c44986552a452.jpg?x-image-process=image/format,webp/resize,w_360#" alt="Product 3">
-                        <h3>Product 3</h3>
+                        <h3>shoes</h3>
                         <p>$39.99</p>
                     </div>
                     <div class="product">
                         <img src="https://img.kilimall.com/c/public/store/11391/goods/image/100959259.jpg?x-image-process=image/format,webp/resize,w_360#" alt="Product 4">
-                        <h3>Product 4</h3>
+                        <h3>drayer</h3>
                         <p>$49.99</p>
                     </div>
                 </div>
