--- a/frontend/login.html
+++ b/frontend/login.html
@@ -11,12 +11,12 @@
         <h2>Login</h2>
         <form action="" method="POST">
             <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
+                <label for="email">Email: <input type="email" id="email" name="email" required></label>
+                
             </div>
             <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
+                <label for="password">Password:<input type="password" id="password" name="password" required></label>
+                
             </div>
             <button type="submit">Login</button>
             <p>Don't have an account? <a href="register.html">Register</a></p>
