--- a/frontend/home.html
+++ b/frontend/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Marketplace</title>
     <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body>
     <header>
@@ -25,10 +26,17 @@
         <section class="hero">
             <div class="container">
                 <!-- <img src="banner.jpg"> -->
+                <form>
+                    <div class="search">
+                        <span class="search_icon material-symbols-outlined">search</span>
+                        <input class="search_input" type="text" placeholder="Search"name="" value="">
+                    </div>
+                </form>
                 <h2>Welcome to the Best Online Marketplace</h2>
                 <p>Find the best products at unbeatable prices!</p>
                 <a href="#" class="btn">Shop Now</a>
             </div>
+            
         </section>
         <section class="featured-products">
             <div class="container">
