--- a/frontend/home.html
+++ b/frontend/home.html
@@ -12,12 +12,12 @@
         <div class="container">
             <h1>Online Marketplace</h1>
             <nav>
-                <ul>
+                <ul class="navigation">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Products</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
-                    <li><a href="login.html">Login</a></li>
+                    <li> <a href="login.html">Login </a></li>
                 </ul>
             </nav>
         </div>
